infra/tf/server/aws_security.tf
resource "aws_key_pair" "ssh-key" {
  key_name   = "ssh-key"
  public_key = file("${path.module}/credentials/aws-key.pub")
}

resource "aws_security_group" "group" {
  name = "group"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
